hopbox/deploy/base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hopbox
  labels:
    app.kubernetes.io/instance: hopbox
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app.kubernetes.io/instance: hopbox
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: hopbox
      annotations:
        profiles.grafana.com/memory.scrape: "true"
        profiles.grafana.com/memory.port: "6060"
        profiles.grafana.com/cpu.scrape: "true"
        profiles.grafana.com/cpu.port: "6060"
        profiles.grafana.com/goroutine.scrape: "true"
        profiles.grafana.com/goroutine.port: "6060"
    spec:
      containers:
      - name: hopbox
        image: robinbaeckman/hopbox
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8090
          name: http
          protocol: TCP
        - containerPort: 8080
          name: grpc
          protocol: TCP
        - containerPort: 6060
          name: prof
          protocol: TCP
        resources:
          requests:
            cpu: 30m
            memory: 50Mi

...
